@@ -1,4 +1,5 @@
 0.4.0:
+* dcl: new module (Double linked cell list) (2006-12-31)
 * dcn: new module (Double linked cell list node) (2006-12-31)
 * dnl: new module (Double linked node list) (2006-12-28)
 * dnn: new module (Double linked list node) (2006-12-28)
